# aws-sns-sqs

./: .env  .env.localstack  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
.git-crypt/keys/default/0/: F13AFD38153C0B15A274FF34616A918B7C64BCA4.gpg
src/: __init__.py  aws_connection.py  aws_queue.py  aws_topic.py  config.py  config_producer.py  live_dash.py  main.py  message.py  notification_sender.py  queue_listener.py  send_message_sns.py  setup.py  simple_message.py  test_message.py  utils.py
src/queries/: aggregate_message.sql  aggregate_simple_message.sql
src/scripts/: aws_connection.py  aws_queue.py  aws_topic.py  message.py  postgres.py
tests/: test_listen_sqs.py  test_postgres.py  test_send_sns.py
